application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-python
  namespace: ns-python
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: python.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-python
            port: 
              number: 8889
  - host: grafana.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-grafana
            port: 
              number: 3000
  - host: prometheus.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-prometheus
            port: 
              number: 9090
